Produzione/force-app/main/default/objects/Utente_Chat__c/Utente_Chat__c.object-meta.xml
<CustomObject>
    <description>Relazione tra l&apos;utente e la chat utilizzata nel working group</description>
    <label>Utente Chat</label>
    <nameField>
        <displayFormat>UCH-{0000000}</displayFormat>
        <label>Nome Utente Chat</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utenti Chat</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>