Produzione/force-app/main/default/objects/Utente_Chat__c/fields/Abilita_Notifiche__c.field-meta.xml
<CustomField>
    <fullName>Abilita_Notifiche__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Se selezionato abilita le notifiche via app</description>
    <inlineHelpText>Se selezionato abilita le notifiche via app</inlineHelpText>
    <label>Abilita Notifiche</label>
    <type>Checkbox</type>
</CustomField>