Produzione/force-app/main/default/objects/Utente_Chat__c/fields/Abilita_Storico__c.field-meta.xml
<CustomField>
    <fullName>Abilita_Storico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Abilita la visualizzazione dello storico dei messaggi</description>
    <inlineHelpText>Abilita la visualizzazione dello storico dei messaggi</inlineHelpText>
    <label>Abilita Storico</label>
    <type>Checkbox</type>
</CustomField>