Produzione/force-app/main/default/objects/Utente_Chat__c/fields/Data_Ora_Rimozione__c.field-meta.xml
<CustomField>
    <fullName>Data_Ora_Rimozione__c</fullName>
    <description>Data e ora di rimozione dell&apos;utente alla chat</description>
    <inlineHelpText>Data e ora di rimozione dell&apos;utente alla chat</inlineHelpText>
    <label>Data Ora Rimozione</label>
    <type>DateTime</type>
</CustomField>