Produzione/force-app/main/default/objects/Utente_Chat__c/fields/Data_Ora_Ultimo_Accesso__c.field-meta.xml
<CustomField>
    <fullName>Data_Ora_Ultimo_Accesso__c</fullName>
    <description>Data e ora ultimo accesso alla chat</description>
    <inlineHelpText>Data e ora ultimo accesso alla chat</inlineHelpText>
    <label>Data Ora Ultimo Accesso</label>
    <type>DateTime</type>
</CustomField>