Produzione/force-app/main/default/objects/Utente_Chat__c/fields/Rimosso_Da_Utente__c.field-meta.xml
<CustomField>
    <fullName>Rimosso_Da_Utente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Utente che ha rimosso l&apos;utente dalla chat</description>
    <inlineHelpText>Utente che ha rimosso l&apos;utente dalla chat</inlineHelpText>
    <label>Rimosso Da Utente</label>
    <referenceTo>Utente__c</referenceTo>
    <relationshipLabel>Utenti Chat (Rimosso Da Utente)</relationshipLabel>
    <relationshipName>Utenti_Chat2</relationshipName>
    <type>Lookup</type>
</CustomField>